--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,11 @@
   </head>
   <body>
     <h1>Shortly</h1>
-
+    <a href="#signin">Sign In</a>
+    <a href="#signup">Sign Up</a>
+    <a href="#links">Links</a>
+    <a href="#shorten">Shorten</a>
+    <button>Logout</button>
     <!-- the ng-view directive is where our templates will be loaded into when naviagted to -->
     <div ng-view></div>
 
