--- a/client/app/auth/signin.html
+++ b/client/app/auth/signin.html
@@ -1,9 +1,10 @@
-<div id='signin'>
+<div id='signin' ng-controller="AuthController">
   <h1>signin</h1>
   <form name="signinForm" ng-submit='signin()'>
     <input type='text'ng-model='user.username'>
     <input type="password" ng-model='user.password'>
     <button>signin</button>
   </form>
+  <button ng-click='signout()'>Logout</button>
   <a href="#/signup">Don't have an account? <strong>Signup</strong> ...</a>
 </div>
