--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
     <a href="#signup">Sign Up</a>
     <a href="#links">Links</a>
     <a href="#shorten">Shorten</a>
-    <button>Logout</button>
+    <button ng-click='Auth.signout()'>Logout</button>
     <!-- the ng-view directive is where our templates will be loaded into when naviagted to -->
     <div ng-view></div>
 
