--- a/client/app/auth/signup.html
+++ b/client/app/auth/signup.html
@@ -1,10 +1,12 @@
 <div id='signup' ng-controller="AuthController">
   <h1>signup</h1>
   <form name="signupForm" ng-submit='signup()'>
-    <input type='text' ng-model='user.username'>
-    <input type="password" ng-model='user.password'>
-    <button>signup</button>
+    <input type='text' ng-model='user.username' ">
+    <input type="password" ng-model='user.password' ">
+    <button">signup</button>
   </form>
   <button ng-click='signout()'>Logout</button>
+  <p ng-repeat="error in usernameErrorMessage track by $index">{{error}}</p>
+
   <a href="#/signin">Already have an account? <strong>Signin</strong> ...</a>
 </div>
