--- a/client/app/auth/signup.html
+++ b/client/app/auth/signup.html
@@ -1,12 +1,12 @@
 <div id='signup' ng-controller="AuthController">
   <h1>signup</h1>
-  <form name="signupForm" ng-submit='signup()'>
-    <input type='text' ng-model='user.username' ">
-    <input type="password" ng-model='user.password' ">
-    <button">signup</button>
+  <form name="signupForm" ng-submit="signup()">
+    <input type='text' ng-model='user.username' ng-change="usernameErrorMessage=''; validateUsername()">
+    <input type="password" ng-model='user.password' ng-change="passwordErrorMessage=''; validatePassword()">
+    <button ng-submit="signup()">signup</button>
   </form>
-  <button ng-click='signout()'>Logout</button>
-  <p ng-repeat="error in usernameErrorMessage track by $index">{{error}}</p>
-
   <a href="#/signin">Already have an account? <strong>Signin</strong> ...</a>
+  <p class="error">{{usernameErrorMessage}}</p>
+  <p class="error">{{passwordErrorMessage}}</p>
+  <div class="error">{{errorMessage}}</div>
 </div>
